0022717: Exception during sewing